name:                day1
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 1
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2016 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

executable day1
  main-is:             day1.hs
  ghc-options:         -O2
  build-depends:       base
  default-language:    Haskell2010
