name:                day4
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 4
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2016 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

executable day4
  main-is:             day4.hs
  ghc-options:         -O2
  build-depends:       base, bytestring, cryptonite
  default-language:    Haskell2010
