name:                day6
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 6
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2016 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

executable day6
  main-is:             day6.hs
  ghc-options:         -O2
  build-depends:       base, parsec, vector
  default-language:    Haskell2010
