name:                day8
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 8
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2016 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

executable day8
  main-is:             day8.hs
  ghc-options:         -O2
  build-depends:       base, parsec
  default-language:    Haskell2010
