name:                day21
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 21
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2015 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

executable day21
  -- hs-source-dirs:      
  main-is:             day21.hs
  ghc-options:         -O2
  build-depends:       base
  default-language:    Haskell2010
