name:                day22
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 22
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2015 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    SimState, SimSearch, BBSearch
    build-depends:      base, containers, transformers, mtl,
                        microlens, microlens-th, microlens-mtl
    ghc-options:        -O2
    default-language:   Haskell2010

executable day22
    main-is:            day22.hs
    build-depends:      base, day22
    ghc-options:        -O2
    default-language:   Haskell2010

executable day22-compare
    main-is:            day22-compare.hs
    build-depends:      base, day22, microlens
    ghc-options:        -O2
    default-language:   Haskell2010

test-suite test-day22
    main-is:            test-day22.hs
    build-depends:      base, day22, HUnit
    ghc-options:        -O2
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010

benchmark bench-day22
    main-is:            bench-day22.hs
    build-depends:      base, day22, criterion
    ghc-options:        -O2
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
