name:                day23
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 23
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2015 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

executable day23
  -- hs-source-dirs:      
  main-is:             day23.hs
  ghc-options:         -O2
  build-depends:       base
  default-language:    Haskell2010
