name:                day24
version:             0.1.0.0
synopsis:            Advent of Code 2015 - Day 24
author:              Grant Glouser
maintainer:          gglouser@yahoo.com
copyright:           2015 Grant Glouser
build-type:          Simple
cabal-version:       >=1.10

executable day24
  -- hs-source-dirs:      
  main-is:             day24.hs
  ghc-options:         -O2
  build-depends:       base
  default-language:    Haskell2010
